Add features, edit README and add some more matrices (1138_bus for big an real search, Maragal_6 is for the time being too big to handle)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,7 @@ text_io = "0.1.12"
 
 [profile.release]
 opt-level = 3
+
+[features]
+shortcut_on_invalidation = []
+shortcut_on_pattern_search = []
