--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,12 @@ edition = "2021"
 [dependencies]
 sprs = "0.11.0"
 text_io = "0.1.12"
+bitflags = "1.3.2"
 
 [profile.release]
 opt-level = 3
 
-[features]
-shortcut_on_invalidation = []
-shortcut_on_pattern_search = []
+# No longer required
+# [features]
+# shortcut_on_invalidation = []
+# shortcut_on_pattern_search = []
