--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ sprs = "0.11.0"
 text_io = "0.1.12"
 bitflags = "2.0.0"
 byteorder = "1.4.3"
+linked-hash-map = "0.5.6"
 
 [profile.release]
 opt-level = 3
