--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,10 @@ text_io = "0.1.12"
 bitflags = "2.0.0"
 byteorder = "1.4.3"
 linked-hash-map = "0.5.6"
+stringreader = "0.1.1"
+num-traits = "0.2.15"
+colored = "2.0.0"
+xflags = "0.3.1"
 
 [profile.release]
 opt-level = 3
