--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ num-traits = "0.2.15"
 colored = "2.0.0"
 xflags = "0.3.1"
 linked_hash_set = "0.1.4"
+itertools = "0.10.5"
 
 [profile.release]
 opt-level = 3
