--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ colored = "2.0.0"
 xflags = "0.3.1"
 linked_hash_set = "0.1.4"
 itertools = "0.10.5"
+cute = "0.3.0"
 
 [profile.release]
 opt-level = 3
