--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ xflags = "0.3.1"
 linked_hash_set = "0.1.4"
 itertools = "0.10.5"
 cute = "0.3.0"
+project-root = "0.2.2"
 
 [profile.release]
 opt-level = 3
